# py-api-starter

./: .dockerignore  .env.sample  .gitignore  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  readme.md
.github/workflows/: deploy_production.yml
app/core/: celery.py  fields.py  middleware.py  settings.py  urls.py
app/requirements/: base.txt
app/user/: apps.py  managers.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
docker/dev/: Dockerfile  entrypoint.sh
docker/prod/: Dockerfile  entrypoint.sh
k8s/: readme.md
k8s/api/: deployment.yaml  service.yaml
k8s/aws/: readme.md
k8s/celery/: beat-deployment.yaml  worker-deployment.yaml
k8s/db/: deployment.yaml  service.yaml
k8s/digitalocean/: readme.md
k8s/flower/: deployment.yaml
k8s/ingress/: api-ingress.yaml
k8s/rds/: rds-secrets.yaml  service.yaml
k8s/redis/: deployment.yaml
