[tool.poetry]
name = "mpi-capture-api"
version = "0.1.0"
description = "MPI Capture API"
authors = ["Daniel Ale <danielale9291@gmail.com>"]
license = "ICS"
readme = "README.md"
packages = [{include = "mpi_capture_api"}]

[tool.poetry.dependencies]
python = "^3.10"
autopep8 = "^2.0.2"
boto3 = "^1.26.86"
gunicorn = "^20.1.0"
django-debug-toolbar = "^3.8.1"
psutil = "^5.9.4"
faker = "^17.6.0"
drf-spectacular = "^0.26.0"
djangorestframework-simplejwt = "^5.2.2"
markupsafe = "^2.1.2"
markdown = "^3.4.1"
djangorestframework = "^3.14.0"
twilio = "^7.16.4"
django-import-export = "^3.1.0"
sentry-sdk = "^1.16.0"
pylint = "^2.17.0"
locust = "^2.15.0"
flower = "^1.2.0"
django-redis = "^5.2.0"
redis = "^4.5.1"
celery = "^5.2.7"
pytest-django = "^4.5.2"
channels-redis = "^4.0.0"
channels = "^4.0.0"
email-validator = "^1.3.1"
whitenoise = "^6.4.0"
sendgrid = "^6.9.7"
python-decouple = "^3.8"
python-dateutil = "^2.8.2"
pillow = "^9.4.0"
psycopg2-binary = "^2.9.5"
packaging = "^23.0"
docutils = "^0.19"
django-storages = "^1.13.2"
django-filter = "^22.1"
django-cors-headers = "^3.14.0"
django-widget-tweaks = "^1.4.12"
django = "^4.1.7"
dj-database-url = "^1.2.0"
botocore = "^1.29.86"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
